# antikythera_bayesian_analysis

./: .gitignore  Anisotropic.ipynb  Notebook_0_Exploration.ipynb  Notebook_1_Anisotropic.ipynb  Notebook_2_Isotropic.ipynb  Notebook_3_Model_Comparison.ipynb  Notebook_4_Extra.ipynb  README.md  pyproject.toml
calender_analysis/: __init__.py  analysis.py
docs/source/: conf.py  index.rst
docs/source/Calender_Analysis/: index.rst
stored_results/: Anisotropic_Basic_NS_results.pkl  Anisotropic_Basic_NS_results_2.pkl  Anisotropic_Basic_NS_results_3.pkl  Anisotropic_Basic_Opt_NUTS.nc  Anisotropic_Basic_Opt_NUTS_thinned.nc  Anisotropic_Full_Opt_NUTS.nc  Anisotropic_Full_Opt_NUTS_thinned.nc  Anisotropic_None_Opt_NUTS.nc  Anisotropic_None_Opt_NUTS_thinned.nc  Anistropic_Basic_HMC_Opt_Results.csv  Anistropic_Basic_MLE_Results.pkl  Anistropic_Basic_MLE_Scipy_Results.pkl  Isotropic_Basic_MLE_Scipy_Results.pkl  Isotropic_Basic_NS_results.pkl  Isotropic_Basic_NS_results_3.pkl  Isotropic_Basic_NS_results_final.pkl  Isotropic_Basic_Opt_NUTS.nc  Isotropic_Basic_Opt_NUTS_thinned.nc  Isotropic_Full_Opt_NUTS.nc  Isotropic_Full_Opt_NUTS_thinned.nc  Isotropic_None_Opt_NUTS.nc  Isotropic_None_Opt_NUTS_thinned.nc  Istropic_Basic_HMC_Opt_Results.csv  Istropic_Basic_MLE_Results.pkl
